test/sema/mismatching-argument-label.delta
// RUN: %check_errors %not %delta -typecheck %s

int f(int foo, bool bar) { return foo; }

int main() {
    // CHECK: [[@LINE+1]]:22: error: invalid argument name 'qux' for parameter 'bar'
    return f(foo: 5, qux: false);
}
